2010-11-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>

    Replace the deprecated functions 
    xalloc/xrealloc/xfree/xcalloc with 
    malloc/realloc/free/calloc.
    Refer to "/xserver/include/os.h"

	* src/via_accel.c: (viaSetupCBuffer), (viaTearDownCBuffer),
	(viaInitExa), (viaExitAccel), (viaFinishInitAccel):
	* src/via_dga.c: (VIASetupDGAMode):
	* src/via_dri.c: (VIAInitVisualConfigs), (VIADRIScreenInit),
	(VIADRICloseScreen):
	* src/via_driver.c: (VIAFreeRec), (VIAProbe), (VIAPreInit),
	(VIACloseScreen):
	* src/via_memcpy.c: (viaVidCopyInit):
	* src/via_swov.c: (Upd_Video):
	* src/via_vbe.c: (ViaVbeSetMode):
	* src/via_video.c: (viaExitVideo), (viaStopVideo),
	(viaDmaBlitImage):
	* src/via_xvmc.c: (cleanupViaXvMC), (ViaCleanupXVMC),
	(ViaXvMCCreateContext), (ViaXvMCCreateSurface),
	(ViaXvMCCreateSubpicture), (ViaXvMCDestroyContext),
	(ViaXvMCDestroySurface), (ViaXvMCDestroySubpicture),
	(viaXvMCInitXv):

2010-10-24  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Siragon ML-6200 laptop support

	* src/via_id.c:

2010-06-24  Jon Nettleton  <jon.nettleton@gmail.com>

	PM800 also uses the CME Engine.  Setup the hqv_cme_regs
	for it.

	* src/via_swov.c: (VIAVidHWDiffInit):

2010-06-09  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix freeze on 64bit system for K8M800 chipset

	* src/via_dri.c: (VIADRIAgpInit):

2010-05-04  Jon Nettleton <jon.nettleton@gmail.com>

	Re-enable the Virtual Queue for the VX800/VX855 chipsets.

	* src/via_accel.c: (viaDisableVQ), (viaInitialize2DEngine):

2010-05-04  Jon Nettleton  <jon.nettleton@gmail.com>

	Disable certain hardware clipping options for the VX855.
	These cause the 2d engine to become unstable when in
	16-bit mode.

	* src/via_accel.c: (viaInitXAA):

2010-05-04  Jon Nettleton <jon.nettleton@gmail.com>

	Add an undocumented option which allows certain I2C buses
	to be probed at startup.  This allows workarounds for custom
	chipset makers that have used the VX855 I2C buses for other
	purposes.

	* src/via_bios.h: